--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.8",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "js-cookie": "^3.0.5",
     "mysql": "^2.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
