--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@faker-js/faker": "^9.3.0",
     "@mui/x-data-grid": "^7.22.3",
-    "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "js-cookie": "^3.0.5",
-    "mysql": "^2.18.1",
-    "outlet": "^0.1.5",
-    "react-router-dom": "^7.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "js-cookie": "^3.0.5",
     "json-server": "^1.0.0-beta.3",
+    "mysql": "^2.18.1",
+    "outlet": "^0.1.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
     "web-vitals": "^2.1.4"
