--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "reactjs-popup": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
