--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "js-cookie": "^3.0.5",
@@ -20,6 +21,7 @@
     "outlet": "^0.1.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
@@ -28,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
     "reactjs-popup": "^2.0.6",
+    "recharts": "^2.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
